--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,15 +13,16 @@
         android:theme="@style/Theme.Desafio03">
         <activity android:name=".view.activity.ComicCoverActivity"> </activity>
         <activity android:name=".view.activity.ComicDetailActivity"></activity>
-        <activity android:name=".view.activity.MenuActivity">
+        <activity android:name=".view.activity.MenuActivity"></activity>
+        <activity android:name=".view.activity.RegisterActivity" />
+        <activity android:name=".view.activity.LoginActivity" />
+        <activity android:name=".view.activity.SplashActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".view.activity.RegisterActivity" />
-        <activity android:name=".view.activity.LoginActivity" />
-        <activity android:name=".view.activity.SplashActivity" />
     </application>
 
 </manifest>
